--- a/Booleans.ipynb
+++ b/Booleans.ipynb
@@ -100,11 +100,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "de3d4b54-485f-4f80-9ece-990862d2f498",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = \"Hello\"\n",
+    "y = 15\n",
+    "\n",
+    "print(bool(x))\n",
+    "print(bool(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7be56e6f-9416-427a-a57d-3f04d9a2e82c",
+   "metadata": {},
+   "source": [
+    "Example5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5389172e-ee36-4942-8870-48a1e8b37648",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(\"abc\")\n",
+    "bool(123)\n",
+    "bool([\"apple\", \"cherry\", \"banana\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f42cd9-e8bd-4bcd-9514-4bb9f10f1678",
+   "metadata": {},
+   "source": [
+    "Example6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cc6ff06d-d83d-4152-b2c7-a44b34983307",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(False)\n",
+    "bool(None)\n",
+    "bool(0)\n",
+    "bool(\"\")\n",
+    "bool(())\n",
+    "bool([])\n",
+    "bool({})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9da4f5b3-31d9-4ee3-8c4a-f2d6dd99207d",
+   "metadata": {},
+   "source": [
+    "Example7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6e606ce0-4ec8-4cea-8d4c-f420c54924eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class myclass():\n",
+    "  def __len__(self):\n",
+    "    return 0\n",
+    "\n",
+    "myobj = myclass()\n",
+    "print(bool(myobj))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07ce8c8-664f-43cf-ad3a-d2fef970da94",
+   "metadata": {},
+   "source": [
+    "Example8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1e33f549-98e1-4930-ba9a-40864b68dab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFunction() :\n",
+    "  return True\n",
+    "\n",
+    "print(myFunction())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a8d12e-e01f-437d-9518-b8fe6ad3689b",
+   "metadata": {},
+   "source": [
+    "Example9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fc9fed3c-3df9-45fe-80ff-a8bc3dbef51b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFunction() :\n",
+    "  return True\n",
+    "\n",
+    "if myFunction():\n",
+    "  print(\"YES!\")\n",
+    "else:\n",
+    "  print(\"NO!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853d7524-b61a-4f3b-8cb0-52dbc0fb7955",
+   "metadata": {},
+   "source": [
+    "Example10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "56b6b694-e7ad-46f9-a40e-1ef872ac7cd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 200\n",
+    "print(isinstance(x, int))"
+   ]
   }
  ],
  "metadata": {
